test/sema/negative/subtyping3_ptr.impala
fn main() -> () {
    let x : int = 5;
    let y : &bool = ~x;
}
