test/sema/negative/subtyping3_ptr.output
subtyping3_ptr.impala:3 col 21 - 22: error: mismatched types: expected '&bool' but found '~i32' as initialization type
